--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PobreFlix</title>
+    <link rel="icon" type="image/svg+xml" href="faviconNetflix.png">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -32,3 +33,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
